# carla_toyota_prius_description

./: README.md
carla_toyota_prius_description/: CMakeLists.txt  package.xml  setup,cfg  setup.py
carla_toyota_prius_description/carla_toyota_prius_launch/: package.xml
carla_toyota_prius_description/config/: vehicle_info.param.yaml
carla_toyota_prius_launch/: CMakeLists.txt
