<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_toyota_prius_launch</name>
  <version>0.1.0</version>
  <description>The carla_toyota_prius_launch package</description>
  <maintainer email="raditya.giovanni@tier4.jp">Giovanni Muhammad Raditya</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
